--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,26 @@
 [package]
-name = "bincode"
+name = "bincode-no-std"
 version = "1.3.3" # remember to update html_root_url
-authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Zoey Riordan <zoey@dos.cafe>"]
+authors = ["Ty Overby <ty@pre-alpha.com>", "Francesco Mazzoli <f@mazzo.li>", "David Tolnay <dtolnay@gmail.com>", "Zoey Riordan <zoey@dos.cafe>", "Lone Ge <lone@soo.network>"]
 exclude = ["logo.png", "examples/*", ".gitignore", ".travis.yml"]
-
-publish =  true
-
-repository = "https://github.com/servo/bincode"
+edition = "2021"
+publish = false
+repository = "https://github.com/soon/bincode-no-std"
 documentation = "https://docs.rs/bincode"
 readme = "./readme.md"
 categories = ["encoding", "network-programming"]
 keywords = ["binary", "encode", "decode", "serialize", "deserialize"]
-
 license = "MIT"
 description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"
 
 [dependencies]
-serde = "1.0.63"
+# This crate builds I/O and error trait functionality in `no_std` environments.
+core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
+serde = { version = "1.0.209", default-features = false, features = ["alloc"] }
 
 [dev-dependencies]
-serde_bytes = "0.11"
-serde_derive = "1.0.27"
+serde_bytes = "0.11.15"
+serde_derive = "1.0.209"
 
 [features]
 # This feature is no longer used and is DEPRECATED. This crate relies on the
